[gd_scene load_steps=3 format=3 uid="uid://3k3ccq7i6rxx"]

[ext_resource type="Script" path="res://ui/game_over.gd" id="1_q3t4d"]
[ext_resource type="Texture2D" uid="uid://cfksnllb1bk30" path="res://assets/Titlescreen.png" id="2_m1n2s"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -113.0
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q3t4d")

[node name="Titlescreen" type="Sprite2D" parent="."]
position = Vector2(960, 657)
scale = Vector2(7.56944, 7.56944)
texture = ExtResource("2_m1n2s")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -660.0
offset_top = -318.0
offset_right = 660.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "GAME OVER
RENT NOT PAID ON TIME!"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 55.0
offset_right = 180.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="stats" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Time Survived: 5,43m
Slushies Sold: 52"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 245.0
offset_right = 125.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 2

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
